Внесены правки в верстке Index.html и hotels.html

--- a/hotels.html
+++ b/hotels.html
@@ -25,22 +25,15 @@
       <ul class="navigation-list navigation-user">
         <li class="navigation-item">
           <a href="#" class="navigation-link">
-            <span class="visually-hiden">
-              Поиск
-            </span>
+            <span class="visually-hiden">Поиск</span>
           </a>
         </li>
         <li class="navigation-item">
           <a href="#" class="navigation-link">
-            <span class="visually-hiden">
-              Лайки
-            </span></a>
+            <span class="visually-hiden">Лайки</span></a>
         </li>
         <li class="navigation-item">
-          <a href="#" class="navigation-link">
-            <span class="visually-hiden">
-              Хочу сюда
-            </span></a>
+          <button class="button">Хочу сюда</button>
         </li>
       </ul>
     </nav>
@@ -94,8 +87,8 @@
         </fieldset>
         <fieldset class="hotels-filter-group">
           <legend class="control">Стоимость, ₽:</legend>
-            <input class="text-input" type="text" name="costs-from" value="0" placeholder="от">
-            <input class="text-input" type="text" name="costs-to" value="9000" placeholder="до">
+            <input class="text-input" type="text" name="costs-from" value="0">
+            <input class="text-input" type="text" name="costs-to" value="9000">
             <input type="range" name="costs-range">
             <button class="button button-submit" type="submit">Применить</button>
             <button class="button button-reset" type="reset">Сбросить</button>
@@ -129,23 +122,7 @@
           <b class="hotel-costs">От 4000 ₽</b>
           <button class="button button-more" type="button">подробнее</button>
           <button class="button button-to-favorites" type="button">в избранное</button>
-          <ul class="stars">
-            <li class="star star-active">
-              <span class="visually-hidden">Звезда</span>
-            </li>
-            <li class="star star-active">
-              <span class="visually-hidden">Звезда</span>
-            </li>
-            <li class="star star-active">
-              <span class="visually-hidden">Звезда</span>
-            </li>
-            <li class="star star-active">
-              <span class="visually-hidden">Звезда</span>
-            </li>
-            <li class="star star-hidden">
-              <span class="visually-hidden">Звезда</span>
-            </li>
-          </ul>
+          <div class="stars"></div>
           <p class="hotel-rating">Рейтинг:<span>8,5</span></p>
         </li>
         <li class="hotels-item">
@@ -155,23 +132,7 @@
           <b class="hotel-costs">От 5000 ₽</b>
           <button class="button button-more" type="button">подробнее</button>
           <button class="button button-in-favorites" type="button">в избранное</button>
-          <ul class="stars">
-            <li class="star star-active">
-              <span class="visually-hidden">Звезда</span>
-            </li>
-            <li class="star star-active">
-              <span class="visually-hidden">Звезда</span>
-            </li>
-            <li class="star star-active">
-              <span class="visually-hidden">Звезда</span>
-            </li>
-            <li class="star star-active">
-              <span class="visually-hidden">Звезда</span>
-            </li>
-            <li class="star star-hidden">
-              <span class="visually-hidden">Звезда</span>
-            </li>
-          </ul>
+          <div class="stars"></div>
           <p class="hotel-rating">Рейтинг:<span>9,2</span></p>
         </li>
         <li class="hotels-item">
@@ -181,23 +142,7 @@
           <b class="hotel-costs">От 2500 ₽</b>
           <button class="button button-more" type="button">подробнее</button>
           <button class="button button-to-favorites" type="button">в избранное</button>
-          <ul class="stars">
-            <li class="star star-active">
-              <span class="visually-hidden">Звезда</span>
-            </li>
-            <li class="star star-active">
-              <span class="visually-hidden">Звезда</span>
-            </li>
-            <li class="star star-active">
-              <span class="visually-hidden">Звезда</span>
-            </li>
-            <li class="star star-hidden">
-              <span class="visually-hidden">Звезда</span>
-            </li>
-            <li class="star star-hidden">
-              <span class="visually-hidden">Звезда</span>
-            </li>
-          </ul>
+          <div class="stars"></div>
           <p class="hotel-rating">Рейтинг:<span>6,9</span></p>
         </li>
         <li class="hotels-item">
@@ -207,23 +152,7 @@
           <b class="hotel-costs">От 1500 ₽</b>
           <button class="button button-more" type="button">подробнее</button>
           <button class="button button-to-favorites" type="button">в избранное</button>
-          <ul class="stars">
-            <li class="star star-active">
-              <span class="visually-hidden">Звезда</span>
-            </li>
-            <li class="star star-active">
-              <span class="visually-hidden">Звезда</span>
-            </li>
-            <li class="star star-hidden">
-              <span class="visually-hidden">Звезда</span>
-            </li>
-            <li class="star star-hidden">
-              <span class="visually-hidden">Звезда</span>
-            </li>
-            <li class="star star-hidden">
-              <span class="visually-hidden">Звезда</span>
-            </li>
-          </ul>
+          <div class="stars"></div>
           <p class="hotel-rating">Рейтинг:<span>5,0</span></p>
         </li>
       </ul>
@@ -278,7 +207,7 @@
   </ul>
   <a href="tel:+78128121212" class="phone">+7 (812) 812-12-12</a>
   <a href="https://htmlacademy.ru/" class="academy-link">
-    <span class="visually-hidden">Html academy</span>
+    <img src="#" alt="Html academy"/>
   </a>
 </footer>
 </body>
