--- a/index.html
+++ b/index.html
@@ -26,22 +26,14 @@
         <ul class="navigation-list navigation-user">
           <li class="navigation-item">
             <a href="#" class="navigation-link">
-              <span class="visually-hidden">
-                Поиск
-              </span>
+              <span class="visually-hidden">Поиск</span>
             </a>
           </li>
           <li class="navigation-item">
-            <a href="#" class="navigation-link">
-              <span class="visually-hiden">
-                Лайки
-              </span></a>
+            <a href="#" class="navigation-link"><span class="visually-hiden">Лайки</span></a>
           </li>
           <li class="navigation-item">
-            <a href="#" class="navigation-link">
-              <span class="visually-hiden">
-                Хочу сюда
-              </span></a>
+            <button class="button">Хочу сюда</button>
           </li>
         </ul>
       </nav>
@@ -49,10 +41,8 @@
     <main class="main-index">
       <section class="hero">
         <h1 class="visually-hidden">Седона - городок в Аризоне</h1>
-        <img src="#" alt="Добро пожаловать" class="hero-image-welcome">
-        <img src="#" alt="Великолепный" class="hero-image-gorgeous">
-        <img src="#" alt="Городок Седона" class="hero-image-sedona">
-        <h2>Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
+        <img src="#" alt="Добро пожаловать" class="hero-image-main">
+        <p>Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
         <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
       </section>
       <section class="gallery">
@@ -81,11 +71,10 @@
             <img src="#" alt="Седона: мост дьявола">
           </li>
         </ul>
-        <h3>Приезжайте в Седону отдохнуть в комфорте и уюте!</h3>
-        <p>Опытный персонал и качественное обслуживание!</p>
       </section>
       <section class="advantages">
-        <h2 class="visually-hidden">Преимущества</h2>
+        <h2>Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
+        <p>Опытный персонал и качественное обслуживание!</p>
         <ul class="advantages-list">
           <li class="advantages-item">
             <h3>Жильё</h3>
@@ -103,7 +92,7 @@
       </section>
       <section class="appointment">
         <h2 class="visually-hidden">Поиск гостиницы</h2>
-        <h3>Заинтересовались?</h3>
+        <p>Заинтересовались?</p>
         <p>Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
         <a href="hotels.html">Поиск гостиницы в Седоне</a>
       </section>
@@ -136,7 +125,7 @@
       </ul>
       <a href="tel:+78128121212" class="phone">+7 (812) 812-12-12</a>
       <a href="https://htmlacademy.ru/" class="academy-link">
-        <span class="visually-hidden">Html academy</span>
+        <img src="#" alt="Html academy">
       </a>
     </footer>
   </body>
