Еще правка верстки

--- a/hotels.html
+++ b/hotels.html
@@ -177,7 +177,6 @@
       </li>
     </ul>
   </section>
-  </main>
   <section class="subscribe-hotels">
     <h2>Подпишитесь на рассылку</h2>
     <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
@@ -207,7 +206,7 @@
   </ul>
   <a href="tel:+78128121212" class="phone">+7 (812) 812-12-12</a>
   <a href="https://htmlacademy.ru/" class="academy-link">
-    <img src="#" alt="Html academy"/>
+    <img src="#" alt="Html academy">
   </a>
 </footer>
 </body>
