--- a/index.html
+++ b/index.html
@@ -26,17 +26,15 @@
                 </ul>
                 <ul class="navigation-user">
                     <li class="navigation-user-item">
-                        <a href="#" class="navigation-user-link">
+                        <button class="button-search" type="button">
                             <span class="visually-hidden">Поиск по сайту</span>
-                        </a>
+                        </button>
                     </li>
                     <li class="navigation-user-item">
-                        <a href="#" class="navigation-user-link">
-                            <span class="visually-hiden">В избранное добавлено 12 отелей</span></a>
-                        <span class="likes">12</span>
+                        <button class="button-favorite" type="button">Избранное</button>
                     </li>
                     <li class="navigation-user-item">
-                        <button class="button" type="button">Хочу сюда</button>
+                        <a class="want-there" href="#">Хочу сюда</a>
                     </li>
                 </ul>
             </nav>
@@ -133,8 +131,7 @@
             </section>
             <a href="tel:+78128121212" class="phone" aria-label="Номер телефона для связи">+7 (812) 812-12-12</a>
             <a href="https://htmlacademy.ru/" class="academy-link">
-                <img class="academy-logo" src="images/HTML Academy.svg" width="115" height="33"
-                    alt="Логотип Html academy">
+                <img class="academy-logo" src="images/html-academy.svg" width="115" height="33" alt="Логотип Html academy">
             </a>
         </footer>
     </body>
